# etos-api

./: .coveragerc  .gitignore  CHANGELOG.rst  Dockerfile  Makefile  README.rst  catalog_info.yaml  go.mod  go.sum  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-push.yml  main.yml
cmd/executionspace/: main.go
cmd/iut/: main.go
cmd/logarea/: main.go
cmd/sse/: main.go
configs/: development.env
deploy/etos-executionspace/: Dockerfile  Dockerfile.dev  docker-compose.yml
deploy/etos-iut/: Dockerfile  Dockerfile.dev  docker-compose.yml
deploy/etos-logarea/: Dockerfile  docker-compose.yml
deploy/etos-sse/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: Makefile  conf.py  index.rst
internal/config/: base.go  base_test.go  config.go  executionspace.go  iut.go  logarea.go  sse.go
internal/configs/base/: config.go  config_test.go
internal/configs/executionspace/: config.go  config_test.go
internal/configs/iut/: config.go  config_test.go
internal/configs/logarea/: config.go
internal/database/: database.go
internal/database/etcd/: etcd.go
internal/eventrepository/: eventrepository.go
internal/executionspace/executor/: executor.go  kubernetes.go
internal/executionspace/provider/: kubernetes.go  provider.go
internal/iut/server/: server.go
internal/kubernetes/: kubernetes.go
internal/logging/: logging.go  logging_test.go
internal/logging/rabbitmqhook/: rabbitmqhook.go
internal/rabbitmq/: rabbitmq.go
internal/server/: server.go  server_test.go
manifests/base/: deployment.yaml  ingress.yaml  kustomization.yaml  role.yaml  secret.yaml  service-account.yaml
manifests/base/api/: deployment.yaml  kustomization.yaml  rolebinding.yaml  service.yaml
manifests/base/executionspace/: configmap.yaml  deployment.yaml  kustomization.yaml
manifests/base/iut/: deployment.yaml
manifests/base/logarea/: deployment.yaml  service-account.yaml  service.yaml
manifests/base/sse/: deployment.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
pkg/application/: application.go  application_test.go
pkg/events/: events.go
pkg/executionspace/errors/: errors.go
pkg/executionspace/executionspace/: executionspace.go  executor.go
pkg/executionspace/v1alpha/: executor.go  provider.go  responses.go
pkg/iut/v1alpha1/: v1alpha1.go
pkg/logarea/v1alpha/: logarea.go  logarea_test.go  suite.go
pkg/sse/v1/: sse.go  sse_test.go
pkg/sse/v1alpha/: sse.go
python/: pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
python/docs/: conf.py
python/src/: entry.sh  entry_debug.sh
python/src/etos_api/: __init__.py  main.py
python/src/etos_api/routers/: __init__.py
python/src/etos_api/routers/environment_provider/: __init__.py  router.py
python/src/etos_api/routers/etos/: __init__.py  router.py  schemas.py  utilities.py
python/src/etos_api/routers/lib/: __init__.py  kubernetes.py
python/src/etos_api/routers/logs/: __init__.py  router.py
python/src/etos_api/routers/selftest/: schemas.py
python/src/etos_api/routers/testrun/: __init__.py  router.py  utilities.py
python/src/etos_api/routers/v0/: __init__.py  router.py  schemas.py  utilities.py
python/src/etos_api/routers/v1alpha/: __init__.py  router.py  schemas.py  utilities.py
python/tests/: test_routers.py
scripts/: entrypoint.sh
src/: entry.sh  entry_debug.sh
src/etos_api/: __init__.py  main.py  webserver.py
src/etos_api/lib/: __init__.py  base_tester.py  generic_tester.py  params.py  validator.py
src/etos_api/middleware/: __init__.py
src/etos_api/routers/: __init__.py
src/etos_api/routers/environment_provider/: router.py  schemas.py
src/etos_api/routers/etos/: router.py  schemas.py  utilities.py
src/etos_api/routers/logs/: router.py
src/etos_api/routers/selftest/: __init__.py  router.py
test/testconfig/: testconfig.go
tests/: __init__.py  conftest.py  test_routers.py
tests/lib/: test_validator.py
