[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]

[project]
name = "etos_api"
dynamic = ["version"]
description = "ETOS API"
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "etos_lib==4.3.1",
    "etcd3gw~=2.3",
    "uvicorn~=0.22",
    "fastapi~=0.109.1",
    "aiohttp[speedups]~=3.8",
    "gql[requests]~=3.4",
    "httpx~=0.24",
    "kubernetes~=26.1",
    "sse-starlette~=1.6",
    "opentelemetry-api~=1.21",
    "opentelemetry-exporter-otlp~=1.21",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-sdk~=1.21",
    "jsontas~=1.4",
    "packageurl-python~=0.11",
    "cryptography>=42.0.4,<43.0.0",
    "setuptools_scm~=8.0"
]

[options]
zip_safe = false
include_package_data = true
python_requires = ">=3.4"

[options.packages.find]
where = "src"
exclude = ["tests"]

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos-api"
Repository = "https://github.com/eiffel-community/etos-api"

[project.scripts]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[test]
extras = true

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov etos_api --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools_scm]
root = ".."