[metadata]
name = etos_api
description = ETOS API
author = Tobias Persson
author-email = tobias.persson@axis.com
license = Apache License, Version 2.0
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/eiffel-community/etos-api
project-urls =
    Documentation = https://etos.readthedocs.io/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License:: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    etos_lib==4.0.0
    etcd3gw~=2.3
    pyscaffold~=4.4
    uvicorn~=0.22
    fastapi~=0.109.1
    aiohttp[speedups]~=3.8
    gql[requests]~=3.4
    httpx~=0.24
    kubernetes~=26.1
    sse-starlette~=1.6
    opentelemetry-api~=1.21
    opentelemetry-exporter-otlp~=1.21
    opentelemetry-instrumentation-fastapi==0.43b0
    opentelemetry-sdk~=1.21

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov etos_api --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = etos_api
